--- a/VB-ElixxerX/VB-ElixxerX/VB-ElixxerX.vbproj
+++ b/VB-ElixxerX/VB-ElixxerX/VB-ElixxerX.vbproj
@@ -72,10 +72,22 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmJob4.Designer.vb">
+      <DependentUpon>frmJob4.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmJob4.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Frmlab3.Designer.vb">
       <DependentUpon>Frmlab3.vb</DependentUpon>
     </Compile>
     <Compile Include="Frmlab3.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLab5.Designer.vb">
+      <DependentUpon>frmLab5.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmLab5.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="lab1.designer.vb">
@@ -107,8 +119,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmJob4.resx">
+      <DependentUpon>frmJob4.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frmlab3.resx">
       <DependentUpon>Frmlab3.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLab5.resx">
+      <DependentUpon>frmLab5.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="lab1.resx">
       <DependentUpon>lab1.vb</DependentUpon>
