--- a/VB-ElixxerX/VB-ElixxerX/VB-ElixxerX.vbproj
+++ b/VB-ElixxerX/VB-ElixxerX/VB-ElixxerX.vbproj
@@ -96,6 +96,12 @@
     <Compile Include="frmLab5.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmLab7.Designer.vb">
+      <DependentUpon>frmLab7.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmLab7.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="lab1.designer.vb">
       <DependentUpon>lab1.vb</DependentUpon>
     </Compile>
@@ -136,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLab5.resx">
       <DependentUpon>frmLab5.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLab7.resx">
+      <DependentUpon>frmLab7.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="lab1.resx">
       <DependentUpon>lab1.vb</DependentUpon>
